Improvements for mobile and color change to menu item

--- a/css/sleep_regularity.css
+++ b/css/sleep_regularity.css
@@ -93,7 +93,7 @@ section h2 {
 #mainNav .navbar-toggler {
     font-size: 12px;
     padding: 8px 10px;
-    color: #222222;
+    color: #fedd52;
 }
 
 #mainNav .navbar-nav > li > a {
